--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <p2 id="fnaf2"> shhhh...em breve tudo vai acabar. . . </p2>
 
-        <p> - se nao achou o link clique no ?!</p>
-
+        <p> - se nao achou o link clique no ?!</p><br>
+      <p2>procure direito....></p2>
         
     </div>
 </body>
